Agregando boton copiar y mejorando código

--- a/Encriptador/index.html
+++ b/Encriptador/index.html
@@ -17,6 +17,9 @@
                 <div class="terminos">
                     <p>Sólo letras minúsculas y sin acento</p>
                 </div>
+                <div class="copiar">
+                    <input type="button" class="bt-copiar" value="Copiar" onclick="copiar()">
+                </div>
                 <div class="botones">
                     <input type="button" class="bt-encriptar" value="Encriptar" onclick="encriptar()">
                     <input type="button" class="bt-desencriptar" value="Desencriptar" onclick="desencriptar()">
@@ -27,7 +30,6 @@
                 <div class="mensaje-encriptado" id="mensaje-encriptado">
                     <h2 class="titulo-mensaje" id="titulo-mensaje">Ningún mensaje fue encontrado</h2>
                     <p id="parrafo">Ingrese el texto que quieras encriptar o desencriptar</p>
-                    <!--<textarea name="mensaje" class="mensaje" id="mensaje" cols="30" rows="10"></textarea>-->
                 </div>
             </div>
         </div>
